--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header span {
   top: 0.2rem; /* Ajuste conforme necessário */
   left: 50%; /* Ajuste conforme necessário */
   transform: translateX(-50%);
-  height: 5rem;
+  height: 4rem;
   z-index: 2;
 }
 .centered-image {
@@ -75,7 +75,7 @@ header span {
 
 .iphone-image {
   position: absolute;
-  max-width: 75%;
+  max-width: 65%;
   top: 5rem;
 }
 
@@ -84,7 +84,7 @@ header span {
   font-weight: 600;
   position: absolute;
   color: white;
-  top: 31rem;
+  top: 48dvh;
   font-size: 1.5rem;
   text-align: center;
   line-height: 3rem;
@@ -99,7 +99,7 @@ header span {
   font-weight: 600;
   position: absolute;
   color: white;
-  top: 40rem;
+  top: 63dvh;
   font-size: 2rem;
   text-align: center;
   line-height: 1.5rem;
@@ -119,7 +119,7 @@ header span {
   position: absolute;
   background-color: #0066ff;
   color: white;
-  top: 46rem;
+  top: 74dvh;
   padding: 1rem 3rem 1rem 3rem;
   animation: pisca 1.5s infinite;
   box-shadow: 0px 0px 20px -5px #1570ef;
@@ -138,7 +138,7 @@ header span {
   font-weight: 700;
   position: absolute;
   color: white;
-  top: 53rem;
+  top: 87dvh;
   text-align: center;
   font-size: 0.8rem;
   width: 70%;
